# ppds

./: .gitignore  README.md
0_Nested_Loop/: CMakeLists.txt  NestedLoop.cpp  NestedLoopUtils.hpp
1_Parallelization/: .Join.cpp.kate-swp  CMakeLists.txt  Join.cpp  TimerUtil.hpp
1_Parallelization/.cache/clangd/index/: Join.cpp.D0B028086C1D26EC.idx  JoinUtils.hpp.FE6C2AE4E42C90A4.idx  TimerUtil.hpp.4A4A577F7032D994.idx
2_Memory_Hierarchy/: CMakeLists.txt  Join.cpp  JoinUtils.hpp
3_Partitioning/: CMakeLists.txt  Join.cpp  Join.hpp
4_Strings/: BitwiseTrie.cpp  CMakeLists.txt  Join.cpp  Join.hpp  JoinUtils.hpp  Trie.cpp
4_Strings/.cache/clangd/index/: Join.cpp.97D29378B3F27E70.idx  JoinUtils.hpp.05F97A478CDFD0FB.idx  TimerUtil.hpp.DB7B5CC48BA010BF.idx
4_Strings/Util/include/: BitwiseTrie.hpp  Trie.hpp
DataGenerators/: create_data.sh
DataGenerators/data/: cast_info_uniform.csv  title_info_uniform.csv
DataGenerators/generator_code/: main.py
DataGenerators/generator_code/generators/: DataGenerator.py  MatchRateCastInfoGenerator.py
StringDataGenerator/: DataGenerator.py  generateData.py  generateStringData.py  util.py
StringDataGenerator/data/: cast.csv  cast2.csv  cast_info_uniform.csv  title.csv  title2.csv  title_info_uniform.csv
StringDataGenerator/movieTitles/: movieList.txt  movieListLonger.txt  produceMovieTitles.sh  thirtyLongMovies.txt  twentyLongMovies.txt  twentyMediumLongMovies.txt  twentyShortMovies.txt
ZipfianDataGenerator/DataGenerators/data/: cast_info_uniform.csv  title_info_uniform.csv
ZipfianDataGenerator/DataGenerators/generator_code/: main.py  util.py
ZipfianDataGenerator/DataGenerators/generator_code/generators/: TitleGenerator.py  UniformCastInfoGenerator.py  ZipfianCastInfoGenerator.py
plots/: job_output_100.txt  job_output_101.txt  job_output_102.txt  job_output_103.txt  job_output_133.txt  job_output_249.txt  job_output_93.txt  job_output_99.txt
